--- a/src/App.css
+++ b/src/App.css
@@ -100,9 +100,15 @@ footer{
   height:150px;
 }
 
+
+
+
 @media (max-width: 767px) {
   .grid-container{
     grid-template-columns: auto;
+  }
+  .main-logo{
+    width:40%;
   }
 
 }
