--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -30,6 +30,12 @@ body {
 .hamburger{
     width:50%;
 }
+@media (max-width: 992px) {
+    .navbar{
+        background: #ff9c9c;
+    }
+}
+
 @media (max-width: 420px) {
     .logo{
         width:130px;
@@ -38,6 +44,7 @@ body {
     
     .navbar .navbar-brand, .navbar .nav-link {
         color: #555;
+        
     }
 }
 
