--- a/src/contactstyles.css
+++ b/src/contactstyles.css
@@ -37,7 +37,7 @@ textarea {
   
   width: 100%;
   max-width: 820px;
-  background-color: #FFF5EE;
+  background-color: #fcfcfc;
   border-radius: 10px;
   z-index: 1000;
   overflow: hidden;
