--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -2,7 +2,7 @@ body {
     box-sizing:border-box;
     margin:0;
     padding:0;
-    background-color: #fcfcfc;
+    background-color: #FFF5EE;
 }
 .logo.active{
     display:none;
