--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,6 @@ iframe{
  -ms-user-select: none; /* Internet Explorer/Edge */
   font-size:1.2rem;
   font-weight:600;
-  
   color: #2c5644;
 }
 .read-more-btn:hover{
@@ -99,11 +98,15 @@ iframe{
   width:100%;
 }
 a{
-  color: #2c5644;
+  color: #2c5644 !important;
 }
 a:hover {
-  color: #ad0129;
-  text-decoration: none;
+  color: #ad0129 !important;
+  text-decoration: none !important;
+}
+h1{
+  font-size: 2.5rem !important;
+  font-weight: 400 !important;
 }
 h3{
   margin-top:-5px;
